# bio-ext

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
bioext/: pyproject.toml
deployment/: .env.example  artifact_test.py  cleanup_mlflow.sh  docker-compose.yml  mlflow-entrypoint.sh  mlflow.Dockerfile  setup.sh  test_mlflow.sh  var_load_macos.example.sh  var_load_ubuntu.example.sh
deployment/test_ml_runs/: logreg_test.py  requirements.txt
deployment/test_runs/: logreg_whg_test.py  wine_test.py
deployment_local/: docker-compose.yml  start.sh
docs/: cogstackelastic.md
es_connect/: .env.example  elastic_connect.py  elastic_test.py  test_connect.py
local_dev/: .env.example
pipeline/: README.md
pipeline/automation/: .dockerignore  .env.example  Dockerfile  dagster.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml
pipeline/automation/projects/: definitions.py
pipeline/automation/projects/bioext_replication/: assets.py  checks.py  config.py  resources.py
pipeline/automation/projects/common/: config.py  resources.py  utils.py
pipeline/automation/projects/infer/: config.py
pipeline/automation/projects/infer/oncollama_epic_letters/: __init__.py  assets.py  main.py
pipeline/automation/projects/infer/oncollama_epic_mdt/: __init__.py  assets.py  main.py
pipeline/automation/projects/ingest/epic_oncology_letters/: __init__.py  assets.py
pipeline/automation/projects/ingest/epic_oncology_mdt/: __init__.py  assets.py
pipeline/automation/projects/oncollama_epic/: assets.py  main.py
pipeline/automation/projects/tests/: test_common_utils.py  test_oncollama_epic.py
pipeline/test_oncollama_epic/: main.py
pipeline/test_oncollama_epic/testdata/: test1.json  test2.json  test3.json  test4.json  test5.json  test6.json  test7.json  test8.json  test9.json
pipeline/test_oncollama_epic/testoutputs/: processed_test1.json  processed_test2.json  processed_test3.json
projects/: .env.example
projects/bert_train_toy/: README.md  deploy.sh  requirements.txt  train.py
projects/brca_legacy/: breast_brca.py  requirements.txt
projects/cogstack_query_dash/: .env.example  Hello.py  README.md  altair-plots.py  eda_experimental.py  gen_eda.py  pyproject.toml  querychecker.ipynb  test.py
projects/cogstack_query_dash/csdash/: __init__.py  dbaccess.py  nlp.py  transforms.py
projects/cogstack_query_dash/pages/: 1_Indexes.py  2_Queries.py  3_Searcher.py
projects/cogstack_query_dash/utils/: config_dash.yaml  gstt_elastic_directory.md
projects/jak2/: 00-explore.py  EJ.Rmd  README.md  pipeline.qmd
projects/local_synth_brca/: .env.example  README.md  bin_class_train.py  bin_ex.py  config.json  init_esload.py  load_es2doc.py  local_config.cfg  main.py  requirements.txt  synthetic_brca_load_Docc.py  synthetic_brca_load_ES.py  synthetic_brca_retrieve.py  synthetic_brca_stream_Docc.py  train_NLP.py  yamlwriter.py
projects/local_synth_brca/data/: binary_BRCA.jsonl  multiclass_BRCA.jsonl
projects/local_synth_brca/multiclass_NLP/: NLPDataModule.py  NLPDataset.py  NLPNetwork.py
projects/local_synth_brca/tests/: test_LoadImageXNATd.py
projects/pipeline_development/: .gitignore  pipeline.ipynb  projectid.yaml  requirements.txt
projects/pipeline_development/_scratch/: torch_base_classes.py
projects/pipeline_development/data/: test_binary_20250318.jsonl
projects/scratch/: GeneWorks_stats.txt  Hello.py  README.md  characterise_indexes.py  config.yaml  generate_canon_biomarkers.py  gstt_elastic_directory.md  index_dash.py  oncbiomarker.py  requirements.txt  test.py  visualise_indexes.py
projects/synthetic_brca/: .env.example  synthetic_brca_load.py  synthetic_brca_load_es.py  synthetic_brca_stream.py
projects/test_bert_deploy/: bin_class_train.py  requirements.txt  train.py
projects/test_bert_train/: train.py
projects/test_elastic_conn/: .env.example  test_connection.py
projects/test_elastic_eland/: Main.py  requirements.txt  utils.py
projects/test_ml_runs/: .env.example  logreg_test.py  logreg_whg_test.py  wine_test.py
projects/test_multiclass_classifier/: README.md  multiclassifier.py  requirements.txt
serve/medcat/: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
serve/oncollamav2/: .env.example  docker-compose.yml  testcall.py
src/bioext/: dataset_utils.py  doccano_utils.py  elastic_utils.py  hf_utils.py  hfpipeline.py  mctrainer_utils.py
src/doccano/: .env.example  __init__.py  test_connection.py
src/elastic/: __init__.py  breast_brca.py  test_connection.py
tests/test_elastic_conn/: .env.example  requirements.txt  test_connection.py
tests/test_ml_runs/: wine_test.py
tutorials/medcattrainer/: medcattrainer_api_tutorial.ipynb
(+24 files in other folders)
