[project]
name = "bioext"
version = "0.1.0"
description = "Helper functions for bio-ext pipelines"
authors = [
    { name = "Joe Zhang", email = "joe.zhang@gstt.nhs.uk" },
    { name = "Lawrence Adams", email = "lawrence.adams@gstt.nhs.uk" },
]
readme = "README.md"
requires-python = ">=3.11.2"
dependencies = [
    "mlflow[extras]",
    "boto3",
    "requests",
    "elasticsearch",
    "elasticsearch-dsl",
    "elastic-transport",
    "doccano-client @ git+https://github.com/drjzhn/doccano-client-urrlib-fix.git",
]


[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle: bad formatting
    "W",   # pycodestyle: warnings
    "F",   # pyflakes: common errors
    "I",   # isort: handles badly setup imports, and orders
    "B",   # flake8-bugbear: common bugs/footguns
    "C90", # mccabe cyclomatic complexity: for badly nested conditional statements that makes logic hard to follow
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ruff>=0.9.6"]

[tool.hatch.build.targets.wheel]
packages = ["src/bioext"]

[tool.hatch.metadata]
allow-direct-references = true
