[project]
name = "bioext"
version = "0.1.0"
description = "Helper functions for bio-ext pipelines"
authors = [
    { name = "Joe Zhang", email = "joe.zhang@gstt.nhs.uk" },
    { name = "Lawrence Adams", email = "lawrence.adams@gstt.nhs.uk" },
    { name = "Sophie Ratkai", email = "sophie.ratkai@gstt.nhs.uk" },
]
readme = "README.md"
requires-python = ">=3.11.2"
dependencies = [
    "requests",
    "evaluate",
    "elasticsearch",
    "elasticsearch-dsl",
    "elastic-transport",
    "doccano-client @ git+https://github.com/drjzhn/doccano-client-urrlib-fix.git",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
ml = [
    "mlflow[extras]",
    "boto3",
    "transformers",
    "datasets",
    "torch",
    "huggingface-hub",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bioext"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = ["pytest>=8.3.5"]
