[project]
name = "automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.2"
dependencies = [
    "dagster>=1.8.13",
    "dagster-postgres>=0.24.13",
    "dagster-webserver>=1.8.13",
    "elastic-transport>=8.17.1",
    "elasticsearch>=8.17.2",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "mock>=5.2.0",
 "pytest>=8.3.5",
 "ruff>=0.11.2",
]

[tool.dagster]
module_name = "projects.definitions"
code_location_name = "projects"

[tool.pytest.ini_options]
pythonpath = ["projects/"]
