[project]
name = "cogstack-query-dash"
version = "0.1.0"
description = "streamlit dash app to help viz queries and come up with query strings"
readme = "README.md"
requires-python = ">=3.11.2"
dependencies = [
    "dotenv",
    "elasticsearch",
    "pandas",
    "streamlit",
    "pyyaml",
    "marimo>=0.11.30",
    "nltk>=3.9.1",
    "ipykernel>=6.29.5",
    "rich>=14.0.0",
    "openpyxl>=3.1.5",
]
